@@ -875,6 +875,12 @@ body {
 
 <p><strong>text.text</strong> | <code>string</code> | The text to be displayed.</p>
 
+<p><strong>button.button_pos</strong> | <code>point</code> | Position of the button.</p>
+
+<p><strong>button.button_image</strong> | <code>filename</code> | Image file to use for this button. Default is the normal menu button.</p>
+
+<p><strong>button.text</strong> | <code>string</code> | Optional text label for the button.</p>
+
 <hr />
 
 <h4>MenuCharacter</h4>
